# cashew

./: AGENTS.md  Cargo.toml  Dioxus.toml  README.md  ROADMAP.md  default_cashew.json
.codex/skills/implement-formula/: SKILL.md
.codex/skills/implement-formula/agents/: openai.yaml
internal_docs/: caching.typ
src/: main.rs
src/backend/: cache.rs  document.rs  fill.rs  formula_implementations.rs  formulas.rs  mod.rs  settings.rs
src/backend/formula_implementations/: concatenate_video.rs  evaluation.rs  generate_image.rs  generate_video.rs  json_extract.rs  llm.rs  math.rs  segment.rs
src/backend/providers/: fal_image.rs  fal_image_models.json  fal_segment.rs  fal_video.rs  fal_video_models.json  mod.rs  openrouter.rs
src/frontend/: app.rs  components.rs  mod.rs  selection.rs  state.rs  styles.css
src/frontend/components/: bottom_panel.rs  formula.rs  menu.rs  sheet.rs  status.rs
