[package]
name = "cashew"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
base64 = "0.22"
dioxus = { version = "0.7.9", features = ["desktop"] }
dioxus-cli-config = "0.7.9"
rfd = "0.14"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_json_path = "0.7"
sha2 = "0.10"
